--- a/Comapare/Comp.html
+++ b/Comapare/Comp.html
@@ -203,7 +203,7 @@
         <div>
           <main>
             <div class = "card">
-              <img src="motherboard.jpg" alt="">
+              <img src="SSD.jpg" alt="">
               <div class="card-content">
                 <h2>
                   Storage  
@@ -224,7 +224,7 @@
         <div>
           <main>
             <div class = "card">
-              <img src="motherboard.jpg" alt="">
+              <img src="Graphic card.jpg" alt="">
               <div class="card-content">
                 <h2>
                   Graphic Card  
@@ -245,7 +245,7 @@
         <div>
           <main>
             <div class = "card">
-              <img src="motherboard.jpg" alt="">
+              <img src="AIO.png" alt="">
               <div class="card-content">
                 <h2>
                   Cooling System  
@@ -266,7 +266,7 @@
         <div>
           <main>
             <div class = "card">
-              <img src="motherboard.jpg" alt="">
+              <img src="Power Supply.jpg" alt="">
               <div class="card-content">
                 <h2>
                   Power Supply 
@@ -287,7 +287,7 @@
         <div>
           <main>
             <div class = "card">
-              <img src="motherboard.jpg" alt="">
+              <img src="Cabinet.jpg" alt="">
               <div class="card-content">
                 <h2>
                   Cabinet  
