--- a/Home pAGE/home1.htm
+++ b/Home pAGE/home1.htm
@@ -18,7 +18,7 @@
 <body>
   <div>
     <nav>
-        <div class="navbar">
+        <div class="navbar">`
           <i class='bx bx-menu'></i>
           <a href="/Home pAGE/home1.htm"><div class="logo"><img src="Build Buddy.gif" alt="Logo"></div></a>
           <div class="nav-links">
