--- a/Comapare/Comp.html
+++ b/Comapare/Comp.html
@@ -254,7 +254,7 @@
                  The gaming PC motherboard is the central circuitry hub, connecting components like CPU, GPU, RAM, and storage, crucial for performance and compatibility in gaming rigs.
                 </p>
                 <a href="#" class="button">
-                  More 
+                  Compare 
                   <span class="material-symbols-outlined">
                     arrow_right_alt
                   </span>
